Fixed FindBugs library initialization: now the root dir is specified for findbugs libraries.